--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,5 @@
 /.tmp
 .gitattributes
 /node_modules
-/.vs/VSWorkspaceState.json
-/.vs/tasks.vs.json
-/.vs/slnx.sqlite-journal
-/.vs/slnx.sqlite
-/.vs/config/applicationhost.config
-/.vs/cms/v15/.suo
+*.bat
+*.log
